--- a/examples/example_client.yaml
+++ b/examples/example_client.yaml
@@ -1,4 +1,4 @@
-//add your setups here.
+# add your setups here.
 
 
 
@@ -18,7 +18,8 @@ esp32_ble_tracker:
             }
 
 ble_client:
-  - mac_address: 94:E6:86:01:F0:96 //change to the mac of the device you wish to connect yo
+  # change to the mac of the device you wish to connect to
+  - mac_address: 98:E6:96:01:F0:96 
     id: esp_rcvr
     auto_connect: true
 
@@ -32,8 +33,8 @@ interval:
               characteristic_uuid: 89a40b48-200b-47d5-9429-000900000000
               # A lambda returning an std::vector<uint8_t>.
               value: !lambda |-
-                        // Create an array of three floats
-                        float floats[4] = {id(your_sensor_id_1).state, id(your_sensor_id_1).state, id(your_sensor_id_1).state, id(your_sensor_id_1).state};
+                        // Create an array of four floats
+                        float floats[4] = {id(your_sensor_id_1).state, id(your_sensor_id_2).state, id(your_sensor_id_3).state, id(your_sensor_id_4).state};
 
                         // Convert the floats to a byte array
                         std::vector<unsigned char> byteArray(sizeof(floats));
